alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -534,8 +534,18 @@ body.navToggleActive {
 }
 
 
+.socialM {
+  padding-top: 8px;
+}
 
-.socialM li {
+.socialM img {
+  max-width: 30px;
+  max-height: 30px;
+  -o-object-fit: contain;
+  object-fit: contain;
+} 
+
+/* .socialM li {
   display: inline-block;
 }
 .socialM li + li {
@@ -547,7 +557,7 @@ body.navToggleActive {
   max-height: 30px;
   -o-object-fit: contain;
   object-fit: contain;
-}
+} */
 
 
 
